[gd_scene load_steps=2 format=3 uid="uid://tutorial_ui_scene"]

[ext_resource type="Script" path="res://scripts/ui/TutorialUI.gd" id="1"]

[node name="TutorialUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Tutorial Title"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Tutorial message goes here..."
autowrap_mode = 3

[node name="ContinueButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SkipButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Skip Tutorial"
